# libviewer

./: CMakeLists.txt  README.md
csrc/: loadppm.cpp  main.cpp
test_files/ppm/: ray_traced.ppm
